Ensured arrow icon is visible in Experience section

--- a/Personal Website/style.css
+++ b/Personal Website/style.css
@@ -299,3 +299,8 @@ section {
     width: 400px;
     margin: auto 0;
 }
+
+/* Experience Section */
+#experience {
+    position: relative;
+}
